ビューの編集

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,12 @@
 <h2>トップページ</h2>
 
 <% @posts.each do |p| %>
-  <%= p.content %>
-  <%= p.created_at %>
+  <div class = "post">
+    <div class = "post-date">
+      <%= p.created_at %>
+    </div>
+    <div class = "post-content">
+      <%= p.content %>
+    </div>
+  </div>
 <% end %>
