--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,6 @@
 <h1>今日も良い日だよ</h1>
 <h2>トップページ</h2>
+<%= link_to "新規投稿", new_post_path, method: :get %>
 
 <% @posts.each do |p| %>
   <div class = "post">
